hphp/hack/test/typecheck/loop_forever_switch.php.exp
File "loop_forever_switch.php", line 3, characters 47-47:
A left brace ('{') is expected here. (Parsing[1002])
